--- a/LenguajeDeMarcas/2Trimestre/JavierManzanoOliveros_42/estilos.css
+++ b/LenguajeDeMarcas/2Trimestre/JavierManzanoOliveros_42/estilos.css
@@ -1,24 +1,9 @@
-table {
-    border: 2px solid;
+table, tr, td {
+    border: 2px black solid;
     width: 200px;
     table-layout: fixed;
     border-spacing: 30px 10px;
-}
-
-td {
-    border: 2px solid;
-    width: 200px;
-}
-
-td:empty {
-    display: none;
-}
-
-caption {
     caption-side: bottom;
-}
-
-td.estaSeMueve {
-    position: relative;
-    left: 118px; 
+    border-collapse: separate;
+    empty-cells: hide;
 }
